# ballista

./: .env  Cargo.toml  README.md  package.json  pnpm-lock.yaml  todo.md  usecases.md
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/src/hooked/: mod.rs
common/: Cargo.toml  README.md  export.rs  output.rs
common/src/: lib.rs
common/src/accounts/: mod.rs
common/src/accounts/task_definition/: mod.rs
common/src/logical_components/: condition.rs  expression.rs  mod.rs  value.rs
common/src/schema/: instruction.rs  mod.rs  validation.rs
common/src/task/: action_context.rs  mod.rs  shared.rs  task_action.rs
common/src/task/action/: associated_token_program_instruction.rs  defined_instruction.rs  mod.rs  raw_instruction.rs  schema_instruction.rs  set_cache.rs  system_instruction.rs  token_program_instruction.rs
common/src/types/: execution_frame.rs  execution_state.rs  mod.rs
common/src/types/logical_components/: condition.rs  expression.rs  mod.rs  validation.rs  value.rs
common/src/types/task/: mod.rs  task_account.rs  task_action.rs
common/src/types/task/action/: associated_token_program_instruction.rs  raw_instruction.rs  set_cache.rs  system_instruction.rs
common/src/types/task/command/: command_struct.rs  defined_instruction.rs  mod.rs  raw_instruction.rs  system_instruction.rs  token_program_instruction.rs
configs/: kinobi.cjs  (+3 more)
macros/borsh_boxed/: Cargo.toml
macros/borsh_boxed/src/: lib.rs
macros/borsh_boxed/tests/: macro_tests.rs
programs/ballista/: Cargo.toml  ballista.json
programs/ballista/src/: allocator.rs  error.rs  examples.rs  instruction.rs  lib.rs  log.rs  pda.rs  task_state.rs
programs/ballista/src/buoy/: bullshit  mod.rs
programs/ballista/src/evaluate/: condition.rs  expression.rs  mod.rs  task_account.rs  validation.rs
programs/ballista/src/evaluate/instructions/: associated_token_program.rs  defined.rs  mod.rs  raw.rs  schema.rs  system_program.rs  token_program.rs
programs/ballista/src/processor/: execute.rs  execute_action.rs  mod.rs
programs/ballista/src/processor/schema/: update_schema.rs
programs/ballista/src/schema/: mod.rs  update_schema.rs
programs/ballista/src/utils/: log.rs  macros.rs  mod.rs  pda.rs
programs/ballista/src/validation/: account.rs  mod.rs
tests/ballista/: Cargo.toml
tests/ballista/logs/bubblgum_program/: compute_units.json  simple.txt
tests/ballista/logs/comparison/: ballista-system_transfer_lut_unique.txt  ballista-system_transfer_self.txt  ballista-system_transfer_unique.txt  ballista-token_transfer_existing_accounts.txt  ballista-token_transfer_unique.txt  compute_units.json  native-system_transfer_self.txt  native-system_transfer_unique.txt  native-token_transfer_existing_accounts.txt  native-token_transfer_unique.txt
tests/ballista/logs/jup_program/: compute_units.json  test.txt
tests/ballista/logs/system_program/: compute_units.json  fixed_defined.txt  looping_builtin.txt  looping_defined.txt  seeded_defined_transfer.txt  seeded_transfer.txt  single_builtin.txt
tests/ballista/logs/token_program/: batch_token_transfer.txt  compute_units.json
tests/ballista/src/: lib.rs
tests/ballista/tests/: tests-lib.rs
tests/ballista/tests/bubblegum_program/: simple.rs
tests/ballista/tests/builtins/: system_transfer.rs
tests/ballista/tests/jup_program/: mod.rs
tests/ballista/tests/old/: system_transfer copy 2.rs  system_transfer copy.rs
tests/ballista/tests/suites/: mod.rs  mpl_bubblegum.rs  system_transfer copy 2.rs  system_transfer copy.rs  system_transfer.rs  token_program.rs
tests/ballista/tests/suites/bubblegum_program/: simple.rs
tests/ballista/tests/suites/builtins/: mod.rs  system_transfer.rs
tests/ballista/tests/suites/comparison/: mod.rs  system_transfer_lut_unique.rs  system_transfer_self.rs  system_transfer_unique.rs  token_transfer_existing_accounts.rs  token_transfer_unique.rs
tests/ballista/tests/suites/jup_program/: mod.rs
tests/ballista/tests/suites/schema/: create.rs  mod.rs
tests/ballista/tests/suites/system_program/: defined.rs  seeded.rs  transfer.rs
tests/ballista/tests/suites/token_program/: mod.rs  simple.rs
tests/ballista/tests/system_program/: defined.rs  mod.rs  seeded.rs  transfer.rs
tests/ballista/tests/token_program/: batch_token_transfer.rs  simple.rs
tests/ballista/tests/utils/: error.rs  mod.rs  program_test.rs  schema.rs  test_context.rs  transaction.rs
tests/ballista/tests/utils/ballista/: mod.rs
tests/ballista/tests/utils/ballista/definitions/: instruction_schema.rs  mod.rs  utils.rs
tests/ballista/tests/utils/ballista/definitions/builtin/: mod.rs
tests/ballista/tests/utils/ballista/definitions/builtin/system_program/: transfer.rs
tests/ballista/tests/utils/ballista/definitions/builtin/token_program/: mod.rs  transfer.rs  transfer_existing.rs
tests/ballista/tests/utils/ballista/definitions/defined/: mod.rs
tests/ballista/tests/utils/ballista/definitions/defined/bubblegum_program/: mint.rs
tests/ballista/tests/utils/ballista/definitions/defined/jup_program/: mod.rs
tests/ballista/tests/utils/ballista/definitions/defined/system_program/: transfer.rs
tests/ballista/tests/utils/ballista/definitions/system_program/: transfer.rs
tests/ballista/tests/utils/ballista/definitions/token_program/: transfer.rs
tests/ballista/tests/utils/ballista/task_definitions/: schema.rs
tests/ballista/tests/utils/bubblegum/: tx_builder.rs
tests/ballista/tests/utils/cloning/: account.rs  mod.rs  transactions.rs
tests/ballista/tests/utils/jupiter/: instruction_cloning.rs  jup_instruction_types.rs  mod.rs  quote.rs  transaction_cloning.rs  types.rs
tests/ballista/tests/utils/record/: mod.rs
tests/ballista/tests/utils/setup/: mod.rs  token_account.rs  token_mint.rs  user.rs
tests/ballista/tests/utils/setup/bubblegum/: tree.rs  tx_builder.rs
tests/ballista/tests/utils/solana/: lookuptable.rs  mod.rs
tests/ballista/tests/utils/test_context/: bankclient.rs  mod.rs  trait_definition.rs
tests/ballista/tests/utils/transaction/: mint.rs  mod.rs  token.rs  tx_builder.rs  utils.rs
(+6 files in other folders)
