[workspace]
resolver = "2"
members = [
  "programs/ballista",
  "tests/ballista",
  "clients/rust",
  "common",
  "macros/borsh_boxed",
]

[workspace.package]
version = "2.1.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://steel.new"
documentation = "https://docs.rs/steel/latest/steel/"
repository = "https://github.com/regolith-labs/steel"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
geppetto = { git = "https://github.com/Jac0xb/geppetto.git", rev = "e3b22d7f5d77f46c02a5f516b2897523e60aabd8", package = "geppetto" }
pinocchio = "=0.6.0"
pinocchio-pubkey = "=0.2.1"
pinocchio-token = "0.2.0"
pinocchio-system = "0.2.0"
num_enum = "0.7"
borsh = "=0.10.3"
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.0" }
