[package]
name = "ballista-sdk"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"
description = "A rust client for Ballista"
repository = "https://github.com/Jac0xb/ballista"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
serde = ["dep:serde", "dep:serde_with"]
cpi = []
sdk = ["dep:solana-sdk"]

default = []

[dependencies]
borsh = "=0.10.3"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = { version = "^2.1.0" }
solana-sdk = { version = "^2.1.0", optional = true }
thiserror = "^1.0"
base64 = "0.22.0"
ballista-common = { path = "../../common", features = ["serde"]}

[dev-dependencies]
assert_matches = "1.5.0"