[package]
name = "ballista"
version = "0.1.0"
description = ""
authors = ["Jac0xb"]
repository = "https://github.com/jac0xb/ballista"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../../README.md"

[lib]
name = "ballista"
crate-type = ["cdylib", "lib"]

[features]
default = ["serde", "custom-heap"]
no-entrypoint = []
serde = ["dep:serde", "dep:serde_with"]
custom-heap = []

[profile.release]
lto = "fat"
overflow-checks = true

[dependencies]
bincode = "=1.3.3"
borsh = "=0.10.3"
bytemuck = "=1.18.0"
lib-sokoban = "=0.3.0"
num-traits = "=0.2.18"
sha2-const-stable = "=0.1.0"
shank = "=0.3.0"
# solana-program = "1.18.23"
thiserror = "=1.0.63"
ballista-common = { path = "../../common" }
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=1.0.0", features = ["no-entrypoint"] }
solana-invoke = "=0.1.0"
rhai = "1.19.0"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
pinocchio = "=0.6.0"
pinocchio-pubkey = "=0.2.1"
pinocchio-token = "0.2.0"
pinocchio-system = "0.2.0"
# pinocchio = { git = "https://github.com/Jac0xb/pinocchio.git", rev = "4689aadc60c591cfcda6fff98a4dae12a9ee6942", package = "pinocchio" }
# pinocchio-system = { git = "https://github.com/Jac0xb/pinocchio.git", rev = "4689aadc60c591cfcda6fff98a4dae12a9ee6942", package = "pinocchio-system" }
# pinocchio-token = { git = "https://github.com/Jac0xb/pinocchio.git", rev = "4689aadc60c591cfcda6fff98a4dae12a9ee6942", package = "pinocchio-token" }
pinocchio-associated-token = { git = "https://github.com/Jac0xb/pinocchio.git", rev = "bf968a777ed5d5bde0d87815b1c738df21cbaba8", package = "pinocchio-associated-token" }
bs58 = "0.5.1"

[dev-dependencies]
# solana-program-test = "=1.18.8"