[package]
name = "ballista"
version = "0.1.0"
description = ""
authors = ["Jac0xb"]
repository = "https://github.com/jac0xb/ballista"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../../README.md"

[lib]
name = "ballista"
crate-type = ["cdylib", "lib"]

[features]
default = ["serde", "custom-heap"]
no-entrypoint = []
serde = ["dep:serde", "dep:serde_with"]
custom-heap = []

[profile.release]
lto = "fat"
overflow-checks = true

[dependencies]
bincode = "=1.3.3"
borsh = { workspace = true }
# bytemuck = "=1.18.0"
lib-sokoban = "=0.3.0"
num-traits = "=0.2.18"
sha2-const-stable = "=0.1.0"
shank = "=0.3.0"
thiserror = "=1.0.69"
ballista-common = { path = "../../common" }
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-system = { workspace = true }
geppetto = { workspace = true }
pinocchio-associated-token = { git = "https://github.com/Jac0xb/pinocchio.git", rev = "bf968a777ed5d5bde0d87815b1c738df21cbaba8", package = "pinocchio-associated-token" }
bs58 = "0.5.1"

[dev-dependencies]
# solana-program-test = "=1.18.8"