[package]
name = "ballista_tests"
version = "0.0.1"
description = "Test suite for ballista program"
authors = ["Jac0xb"]
repository = "https://github.com/jac0xb/ballista"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../../README.md"


[features]
default = [
  "suites_bubblegum",
  "suites_system",
  "suites_token",

]
suites_bubblegum = []
suites_system = []
suites_token = []



[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
# tarpc = "0.29.0"
# log = "0.4.20"
# ctor = "0.2.8"
# lazy_static = "1.5.0"

anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
async-trait = "0.1.71"
base64 = "0.22.0"
bincode = "1"
borsh = "^0.10.0"
bytemuck = "1.13.0"
ballista-sdk = { path = "../../clients/rust", features = ["sdk"], default-features = false }
ballista-common = { path = "../../common"}
# borsh_enum_derive = { path = "../../macros/borsh_enum_derive" }
mpl-bubblegum = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "bubblegum", features = ["test-sbf"] }
mpl-bubblegum-sdk = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "mpl-bubblegum" }
mpl-token-metadata = "3.2.3"
rand = "0.8.4"
regex = "1.5.4"
solana-banks-interface = "1.18.23"
solana-client = "1.18.23"
solana-loader-v4-program = "1.18.23"
solana-program = "1.18.23"
solana-program-test = "1.18.23"
# marginfi = { git = "https://github.com/mrgnlabs/marginfi-v2", rev = "7b10c51b9934130b029f220c410e517c0ad8c7c4", package = "marginfi-v2-cli" }
# { git = "https://github.com/Jac0xb/agave-redux.git", rev = "51fe82762cc75b991433226cda55b820db15be5d", package = "solana-program-test" }
solana-sdk = "1.18.23"
solana-vote-program = "1.18.23"
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-concurrent-merkle-tree = "0.2.0"
spl-merkle-tree-reference = "0.1.0"
spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "^0.11.27", features = [] }

# spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }




spl-token = "=4.0.0"
spl-token-2022 = "=1.0.0"
# test-program = { path = "../../programs/test-program/program", features = ["no-entrypoint"] }
# blackhat = { path = "../../programs/blackhat/program", features = ["no-entrypoint"] }
