[package]
name = "ballista_tests"
version = "0.0.1"
description = "Test suite for ballista program"
authors = ["Jac0xb"]
repository = "https://github.com/jac0xb/ballista"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../../README.md"


[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[features]
default = [
  "suites_bubblegum",
  "suites_system",
  "suites_token",
  "suites_jup"

]
suites_bubblegum = []
suites_system = []
suites_token = []
suites_jup = []



[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
# tarpc = "0.29.0"
# log = "0.4.20"
# ctor = "0.2.8"
# lazy_static = "1.5.0"

async-trait = "0.1.71"
base64 = "0.22.0"
bincode = "1"
borsh = "^0.10.0"
bytemuck = "1.13.0"
ballista-sdk = { path = "../../clients/rust", features = ["sdk"], default-features = false }
ballista-common = { path = "../../common"}
rand = "0.8.4"
regex = "1.5.4"
solana-banks-interface = "=2.1.0"
solana-client = "=2.1.0"
solana-loader-v4-program = "=2.1.0"
solana-program = "=2.1.0"
solana-sdk = "=2.1.0"
solana-program-test = "=2.1.0"

strum = "0.24.1"
strum_macros = "0.24.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "^0.11.27", features = [] }
num-traits = "0.2"
num-derive = "0.3"




spl-token = "=7.0.0"
spl-token-2022 = "=6.0.0"
spl-associated-token-account = "6.0.0"
